--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -61,6 +61,11 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
+doctrine_cache:
+    providers:
+        my_markdown_cache:
+            type: file_system
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: '%mailer_transport%'
