--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -19,3 +19,7 @@ AppBundle\Entity\SubFamily:
     subfamily_{1..10}:
         # use some fake data for this
         name: <lastName()>
+
+AppBundle\Entity\User:
+    user_{1..10}:
+        email: siven.bd+<current()>@gmail.com
